# study

./: README.md
c++/: c++.docx
c++/cast/: cast.cpp  dynamic_cast.cpp  interview.txt  reinterpret_cast_hash.cpp
c++/emplace_back/: copy.cpp  left_right_value.cpp  left_right_value_2.cpp  move.cpp  test.cpp
c++/erase/: erase.cpp
c++/exp/: a.out  exp.cpp
c++/inherit/: test.cpp
c++/memory/: 1.cpp  2.cpp  3.cpp  4.cpp  4_readme.txt  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
c++/operator/: a.out  op.cpp
c++/reference_wrapper/: reference_wrapper.cpp  reference_wrapper2.cpp
c++/return_object/: readme.txt  return_object.cpp
c++/sort/: gui_bing_sort.cpp  gui_bing_sort_digui.cpp  maoPao_pai_xu.cpp
c++/sort_lambda/: lambda_2.cpp  lambda_3.cpp  lambda_4.cpp  lambda_5.cpp  lambda_hello_world.cpp  readme.txt  sort.cpp  sort_1.cpp
c++/template/: 1.cpp  class_template.cpp  class_template_.cpp  compare.cpp  func_template.cpp  readme.txt  template.cpp  template_parameter.cpp  template_specialize.cpp  template_type_change.cpp
cublas/column_test/: cublas_column_storage.cpp  readme.txt
cublas/gemm_test/: README
cublas/int8/: gpu_retriveval_int8.cpp
cuda/: CUDA-Programming-Guide-Notes.txt  notes.txt
cuda/cudnn/src/: CMakeLists.txt  common_op.h  dropout_op.cpp  feed_forward_grad_op.cpp  feed_forward_op.cpp  layernorm_op.cpp  multi_head_attention_grad_op.cpp  multi_head_attention_op.cpp  softmax_grad_op.cpp  softmax_op.cpp
cuda/cudnn/src/includes/: context.h  dropout.h  feed_forward.h
cuda/cudnn/src/mha/: multiHeadAttention.cpp  multiHeadAttention.h
cuda/cudnn/src/transformer/: normalize_kernels.cu  softmax_kernels.cu
cuda/einsum/: CMakeLists.txt  readme.txt
cuda/einsum/src/tf_op/: CMakeLists.txt  non_zero_index_grad_op.cc  non_zero_index_grad_op.cu.cc  non_zero_index_grad_op.h  scatter_custom_op.cc  scatter_custom_op.cu.cc  scatter_custom_op.h
cuda/fastertransfomer-llama/: CMakeLists.txt  README.md
cuda/flash_attn_cuda/: README.md  flash_attn.cpp  kernel.cu  readme.txt  setup.py  test_flash_attn.py
cuda/fmha_v2/: README.md  build.sh  fused_multihead_attention.cpp
cuda/mm/: mm_cpu.cpp  mm_simple.cu  mm_simple_more.cu  mm_tile.cu  mm_tile_more.cu
cuda/reduction/: README.md  c_recursive_reduce.c  neighbored.cu  neighbored_improve_divergence.cu  neighbored_interleaved_pairs.cu  (+6 more)
cuda/test/layer_test/csrc/: Bert.cu  CMakeLists.txt  CustomBert.cpp  CustomFunc.cpp  CustomMMSA.cpp  Func.cu  MMSelfAttn.cu
cuda/test/layer_test/csrc/include/: Add.h  AdjMatrixBatch.h  BatchGemm.h  BatchingSequence.h  BertCom.h  BertEncoderInfer.h  BertEncoderTrain.h  BertLayerInfer.h  BertLayerTrain.h  BertMlpInfer.h  BertMlpTrain.h  BertPoolerInfer.h  BertPoolerTrain.h  BiasedPermute.h  BiasedTanh.h  Context.h  DropPath.h  Dropout.h  Gelu.h  LayerNorm.h  Linear.h  LinearLt.h  MMSelfAttnCom.h  MMSelfAttnInferGL.h  MMSelfAttnInferL.h  MMSelfAttnTrainGL.h  MMSelfAttnTrainL.h  Permute.h  PositionsAndTimeDiff.h  RecoverSequenceInfer.h  RecoverSequenceTrain.h  SliceSqueeze.h  Softmax.h  Swin.h  UniOps.h  errMsg.h  gemmLt.h
cuda/test/layer_test/csrc/kernel/: Add.cu  AdjMatrixBatch.cu  BatchingSequence.cu  BertEncoderInfer.cu  BertPoolerInfer.cu  DropPath.cu  Dropout.cu  Gelu.cu  MMSelfAttnInferGL.cu  MMSelfAttnInferL.cu  PositionsAndTimeDiff.cu  RecoverSequenceInfer.cu  SliceSqueeze.cu  Swin.cu  UniOps.cu
cuda/vanilla/src/: CMakeLists.txt  common_op.h  dense_grad.cu  dense_grad_bak.cu  dense_grad_op.cc  dense_grad_op.cu.cc  general_kernels.cu  general_kernels.h  grad_op.h  layernorm_grad.cu  layernorm_grad_op.cc  layernorm_grad_op.cu.cc  multi_head_attention.cu  multi_head_attention_op.cc  multi_head_attention_op.cu.cc  normalize_kernels.cu  normalize_kernels_0.cu  normalize_kernels_1.cu  normalize_kernels_bak.cu  normalize_kernels_not32.cu  softmax_grad.cu  softmax_grad_op.cc  softmax_grad_op.cu.cc
data_structure/: readme.txt  zhi_shu_yinzi.cpp
pattern/: 1-singeton.cpp  2-simple_factory.cpp  3-factory.cpp  4-abstract_factory.cpp
python/: class_student.py  generate_ppm.py.code.txt  map.py  oop_object_oriented.py  reduce.py  str_join.py  using_name.py
pytorch_code/: test_tp.py
pytorch_op/: how_to_make_tensorborad.diff  nn_linear.py  permute.py  unsqueeze.py
quantization/: README.md  deepseek.md  vllm.md
sycl/: README.md
sycl/fastertransformer-xpu/: CMakeLists.txt  README.md
sycl/fastertransformer-xpu/cmake/Modules/: FindOneDNN.cmake
sycl/fastertransformer-xpu/examples/cpp/: CMakeLists.txt
sycl/fastertransformer-xpu/examples/cpp/llama2/: CMakeLists.txt  llama2_example.cpp
sycl/fastertransformer-xpu/examples/cpp/llama2_int4/: CMakeLists.txt  llama2_example_q4.cpp
sycl/fastertransformer-xpu/examples/pytorch/llama/: llama_config.ini  llama_example.py
sycl/fastertransformer-xpu/examples/pytorch/llama/utils/: llama.py
sycl/fastertransformer-xpu/src/: CMakeLists.txt
sycl/fastertransformer-xpu/src/xfastertransformer/: CMakeLists.txt
sycl/fastertransformer-xpu/src/xfastertransformer/kernels/: CMakeLists.txt  DPCPP.h  mha.h
sycl/fastertransformer-xpu/src/xfastertransformer/kernels/fmha/: CMakeLists.txt  fmha_forward.cpp  fmha_forward.h  fmha_policy_v2.h  fmha_utils.h
sycl/fastertransformer-xpu/src/xfastertransformer/kernels/ifmha/: CMakeLists.txt  CMakeLists.txt.bak  ifmha_forward.cpp  ifmha_forward.h  ifmha_policy_v4.h  ifmha_utils_v3.h
sycl/fastertransformer-xpu/src/xfastertransformer/kernels/kernels/: CMakeLists.txt  sycl_kernels.cc  sycl_kernels.h
sycl/fastertransformer-xpu/src/xfastertransformer/layers/: CMakeLists.txt
sycl/fastertransformer-xpu/src/xfastertransformer/models/llama/: CMakeLists.txt  Llama.cc  Llama.h  LlamaWeight.cc  LlamaWeight.h  llama2_sycl.cc  llama2_sycl.h
sycl/fastertransformer-xpu/src/xfastertransformer/models/llama/common/: common.h  sampler.h
sycl/fastertransformer-xpu/src/xfastertransformer/th_op/: CMakeLists.txt
sycl/fastertransformer-xpu/src/xfastertransformer/th_op/llama/: CMakeLists.txt  LlamaOp.cc  LlamaOp.h
threadpool/: ex2.cpp  ex3.cpp  example.cpp  readme  thread_pool.h
virtual/: virtual.cpp  virtual_table.cpp
(+273 files in other folders)
